Fix back-to-top button and line break on language levels

--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -1,5 +1,5 @@
 .cv {
-  margin: 125px auto;
+  margin: 60px auto 0 auto;
   h2 {
     /* display: inline-block;*/
     display: block;
@@ -216,17 +216,21 @@
     & ~ p {
       margin-bottom: 1em;
     }
-    .fa-star,
-    .fa-star-o,
-    .fa-star-half-o {
-      color: #4b6065;
+    & > .stars {
+      white-space: nowrap;
+      .fa-star,
+      .fa-star-o,
+      .fa-star-half-o {
+        display: inline;
+        color: #4b6065;
+      }
     }
   }
 
 
-  /*=============================================================================
-      Git Like Graph
-   =============================================================================*/
+/*=============================================================================
+    Git Like Graph
+ =============================================================================*/
 
   .git-graph {
     position: relative;
@@ -529,7 +533,7 @@
 
 /*=============================================================================
   Small size
-=============================================================================*/
+ =============================================================================*/
 
   @media (max-width: $small) {
     .experience__head,
